--- a/src/Components/Auth/Caption.css
+++ b/src/Components/Auth/Caption.css
@@ -12,4 +12,9 @@
     justify-content: center;
 }
 
-
+.auth-caption-telegram-logo {
+    width: 160px;
+    height: 160px;
+    margin: 107px auto 44px;
+    fill: var(--color-accent-main);
+}
