--- a/src/Components/Auth/AuthForm.css
+++ b/src/Components/Auth/AuthForm.css
@@ -18,6 +18,8 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    margin-right: 250px;
+    margin-top: -100px;
 }
 
 .authorization-form-content .footer-wrapper {
